--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -1,4 +1,6 @@
 <h1>Book Shelf</h1>
 <ul ng-repeat="collection in bs.collection">
   <li>{{collection.title}}</li>
+  <li>{{collection.author}}</li>
+  <li>{{collection.pages}}</li>
 </ul>
