--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>A Book A Week</title>
-    <script type="text/javascript" src="vendor/angular.min.js"></script>
+    <script type="text/javascript" src="vendor/angular.js"></script>
     <script type="text/javascript" src="vendor/angular-route.min.js"></script>
+    <script type="text/javascript" src="vendor/angular-animate.js"></script>
+    <script type="text/javascript" src="vendor/ui-bootstrap-2.3.0.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
     <script src="../scripts/config.js"></script>
@@ -12,6 +14,8 @@
     <script type="text/javascript" src="scripts/controllers/bookShelf.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/nightStand.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/home.controller.js"></script>
+    <script type="text/javascript" src="scripts/controllers/mainCtrl.js"></script>
+    <script type="text/javascript" src="scripts/controllers/modalController.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
