working modal search, bookFactory up and running with API query

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -14,8 +14,9 @@
     <script type="text/javascript" src="scripts/controllers/bookShelf.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/nightStand.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/home.controller.js"></script>
-    <script type="text/javascript" src="scripts/controllers/mainCtrl.js"></script>
-    <script type="text/javascript" src="scripts/controllers/modalController.js"></script>
+    <script type="text/javascript" src="scripts/controllers/modal.controller.js"></script>
+    <script type="text/javascript" src="scripts/controllers/modalInstance.controller.js"></script>
+    <script type="text/javascript" src="scripts/services/book.factory.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
