page update working with book and user id hardcoded

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="scripts/controllers/home.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/modal.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/modalInstance.controller.js"></script>
+    <script type="text/javascript" src="scripts/controllers/progress.controller.js"></script>
+    <script type="text/javascript" src="scripts/controllers/progressModal.controller.js"></script>
     <script type="text/javascript" src="scripts/services/book.factory.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
