finished update page functionality. Moved modal open functions into nightstand controller, deleted unnecessary modal controllers

--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -1,8 +1,8 @@
 <h1>Night Stand</h1>
 
-<div class="modal-demo" ng-controller="MainCtrl as vm">
+<div>
 
-    <button type="button" class="btn btn-default" ng-click="vm.open('lg')">Add A New Book</button>
+    <button type="button" class="btn btn-default" ng-click="ns.openAddBook('lg')">Add A New Book</button>
 
 </div>
 
