--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="scripts/controllers/modalInstance.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/progressModal.controller.js"></script>
     <script type="text/javascript" src="scripts/services/book.factory.js"></script>
+    <script type="text/javascript" src="scripts/services/user.factory.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
