bookshelf getting books but getting them from user factory

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -2,3 +2,12 @@
   display: flex;
   justify-content: center;
 }
+
+/*.progress {
+  display: flex;
+  justify-content: center;
+}
+
+.progress .row {
+  width: 66%;
+}*/
