removing current book information using ng-show when finished book is clicked

--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -14,25 +14,27 @@
     <div uib-alert ng-repeat="alert in ns.alerts track by $index" ng-class="'alert-' + (alert.type || 'warning')" close="ns.closeAlert($index)">{{alert.msg}}</div>
   </div>
 
-  <div class="current_book_info">
-    <img ng-src="{{ns.currentBook.book_thumbnail}}" alt="" />
-    <ul>
-      <li>Title: {{ns.currentBook.title}}</li>
-      <li>Author: {{ns.currentBook.author}}</li>
-      <li>Progress: On page {{ns.currentBook.page_at}} of {{ns.currentBook.pages}}</li>
-      <li title="Number Includes Today">Days Left To Finish: {{ns.daysToGoal}}</li>
-      <li>Pages to Read Per Day: {{ns.pagesPerDay}}</li>
-    </ul>
+  <div class="book_container" ng-show="ns.showCurrentBookInfo">
+    <div class="current_book_info">
+      <img ng-src="{{ns.currentBook.book_thumbnail}}" alt="" />
+      <ul>
+        <li>Title: {{ns.currentBook.title}}</li>
+        <li>Author: {{ns.currentBook.author}}</li>
+        <li>Progress: On page {{ns.currentBook.page_at}} of {{ns.currentBook.pages}}</li>
+        <li title="Number Includes Today">Days Left To Finish: {{ns.daysToGoal}}</li>
+        <li>Pages to Read Per Day: {{ns.pagesPerDay}}</li>
+      </ul>
 
-    <div>
-      <button type="button" name="update_progress" ng-click="ns.open('lg')">Update Your Progress</button>
-      <button type="button" name="finished_book" ng-click="ns.finishedBook()">I've Finished This Book</button>
+      <div>
+        <button type="button" name="update_progress" ng-click="ns.open('lg')">Update Your Progress</button>
+        <button type="button" name="finished_book" ng-click="ns.finishedBook()">I've Finished This Book</button>
+      </div>
     </div>
-  </div>
-  <div>
-    <h3>Progress</h3>
-    <div class="row">
-        <div class="col-md-4"><uib-progressbar ng-max="ns.currentBook.pages" value="ns.currentBook.page_at"><i>{{ns.currentBook.page_at}} / {{ns.currentBook.pages}}</i></uib-progressbar></div>
+    <div>
+      <h3>Progress</h3>
+      <div class="row">
+          <div class="col-md-4"><uib-progressbar ng-max="ns.currentBook.pages" value="ns.currentBook.page_at"><i>{{ns.currentBook.page_at}} / {{ns.currentBook.pages}}</i></uib-progressbar></div>
+      </div>
     </div>
   </div>
 </div>
