--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -3,11 +3,12 @@
   justify-content: center;
 }
 
-/*.progress {
-  display: flex;
-  justify-content: center;
+.fade.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
 }
 
-.progress .row {
-  width: 66%;
-}*/
+/* The finishing CSS styles for the enter animation */
+.fade.ng-enter.ng-enter-active {
+  opacity:1;
+}
