--- a/server/public/views/templates/header.html
+++ b/server/public/views/templates/header.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
-    <h1>A Book A Week</h1>
+<div class="header_nav text-center">
+    <h1 class="nav_header">A Book A Week</h1>
     <div ng-include="'/views/templates/nav.html'"></div>
 </div>
