--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,5 +1,5 @@
-<div class="row col-md-12">
-  <ul class="nav nav-pills nav-justified">
+<div>
+  <ul class="nav nav-pills">
     <li><a href="#home">Home</a></li>
     <li><a href="#book-shelf">Book Shelf</a></li>
     <li><a href="#night-stand">Night Stand</a></li>
