--- a/server/public/views/templates/add-book-modal.html
+++ b/server/public/views/templates/add-book-modal.html
@@ -14,6 +14,9 @@
       <button class="btn btn-warning" type="button" ng-click="mc.close()">Cancel</button>
     </div>
 
+    <div><button ng-click="mc.recommend()"></button>
+    </div>
+
   </form>
 </div>
 
