changed heading on book shelf

--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -1,6 +1,6 @@
 <h1>Book Shelf</h1>
 
-<p>You have read {{bs.totalRead}} books so far.</p>
+<p>You have read {{bs.totalRead}} books so far this year.</p>
 
 <div>
 
