background image, header and some work on font color. All just roughed in

--- a/server/public/views/templates/header.html
+++ b/server/public/views/templates/header.html
@@ -1,4 +1,3 @@
 <div class="header_nav text-center">
-    <h1 class="nav_header">A Book A Week</h1>
-    <div ng-include="'/views/templates/nav.html'"></div>
+    <div class="navigation" ng-include="'/views/templates/nav.html'"></div>
 </div>
