--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,7 +1,8 @@
-<div>
-  <ul class="nav nav-pills">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#book-shelf">Book Shelf</a></li>
-    <li><a href="#night-stand">Night Stand</a></li>
-  </ul>
-</div>
+<ul class="nav_list">
+  <li class="nav_head"><h1>A Book A Week</h1></li>
+  <li><a href="#home">Home</a></li>
+  <li>|</li>
+  <li><a href="#book-shelf">Book Shelf</a></li>
+  <li>|</li>
+  <li><a href="#night-stand">Night Stand</a></li>
+</ul>
