--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -1,5 +1,6 @@
-<div>
+<div class="home_body">
   <h1>Home</h1>
+  <button ng-click="hm.test()">Test</button>
   <button ng-click="hm.signUp()">Sign Up</button>
   <button ng-click='hm.logIn()'>Login</button>
   <button ng-click="hm.logOut()">Logout</button>
