basic styling of select book modal

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -97,6 +97,8 @@ main {
   text-align: center;
 }
 
-.select-book-modal {
-  text-align: center;
+.books-to-repeat {
+  display: flex;
+  align-items: center;
+  margin: 25px;
 }
