--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -23,7 +23,7 @@
 
   <uib-accordion close-others="bs.oneAtATime">
     <div uib-accordion-group class="panel-default" heading="{{collection.title}}" ng-repeat="collection in bs.collection">
-      <img ng-src="{{collection.book_thumbnail}}" alt="" />
+      <img ng-src="{{collection.book_thumbnail}}"/>
       <br />
       {{collection.author}}
       {{collection.pages}}
