styled night-stand current book

--- a/server/public/views/templates/add-book-modal.html
+++ b/server/public/views/templates/add-book-modal.html
@@ -20,7 +20,7 @@
 
 
 
-<div class="bookSelectionOptions" ng-show="mc.books">
+<div class="book-selection-options" ng-show="mc.books">
   <p ng-show="mc.showRecommendAuthor">Because you have read books by {{mc.becauseYouRead}}</p>
   <h4>Select Your Book</h4>
   <div class="books-to-repeat" ng-repeat="books in mc.books track by $index">
