--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -14,6 +14,12 @@ body {
 .current_book_info {
   display: flex;
   justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.current_book_info ul {
+  list-style: none;
 }
 
 h1 {
@@ -101,4 +107,37 @@ main {
   display: flex;
   align-items: center;
   margin: 25px;
+}
+
+.book-selection-options h4 {
+  text-align: center;
+}
+
+.book-selection-list {
+  list-style: none;
+}
+
+.add-book-button {
+  margin: 10px;
+  background-color: rgb(221,219,241);
+  border: 1px solid rgb(56,63,81);
+  color: rgb(56,63,81);
+  padding: 10px;
+  border-radius: 0;
+}
+
+.add-book-button:hover {
+  background-color: rgb(56,63,81);
+  color: rgb(221,219,241);
+}
+
+.no_current_book {
+  padding: 15px;
+  text-align: center;
+}
+
+.night-stand-progress {
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
 }
