--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -4,7 +4,7 @@
 
     <div>
 
-        <button type="button" class="btn btn-default" ng-click="ns.openAddBook('lg')">Add A New Book</button>
+        <button type="button" class="btn btn-default add-book-button" ng-click="ns.openAddBook('lg')">Add A New Book</button>
 
     </div>
   </div>
@@ -36,10 +36,10 @@
           <button type="button" name="finished_book" ng-click="ns.finishedBook()">I've Finished This Book</button>
         </div>
       </div>
-      <div>
+      <div class="night-stand-progress">
         <h3>Progress</h3>
         <div class="row">
-            <div class="col-md-4"><uib-progressbar ng-max="ns.currentBook.pages" value="ns.currentBook.page_at"><i>{{ns.currentBook.page_at}} / {{ns.currentBook.pages}}</i></uib-progressbar></div>
+            <div class="col-md-12"><uib-progressbar ng-max="ns.currentBook.pages" value="ns.currentBook.page_at"><i>{{ns.currentBook.page_at}} / {{ns.currentBook.pages}}</i></uib-progressbar></div>
         </div>
       </div>
     </div>
