--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -31,15 +31,19 @@
           <li>Pages to Read Per Day: {{ns.pagesPerDay}}</li>
         </ul>
 
-        <div>
-          <button type="button" name="update_progress" ng-click="ns.open('lg')">Update Your Progress</button>
-          <button type="button" name="finished_book" ng-click="ns.finishedBook()">I've Finished This Book</button>
+        <div class="night-stand-buttons">
+          <ul>
+             <li><button type="button" name="update_progress" ng-click="ns.open('lg')">Update Your Progress</button></li>
+             <li><button type="button" name="finished_book" ng-click="ns.finishedBook()">I've Finished This Book</button></li>
+          </ul>
+
+
         </div>
       </div>
       <div class="night-stand-progress">
         <h3>Progress</h3>
         <div class="row">
-            <div class="col-md-12"><uib-progressbar ng-max="ns.currentBook.pages" value="ns.currentBook.page_at"><i>{{ns.currentBook.page_at}} / {{ns.currentBook.pages}}</i></uib-progressbar></div>
+            <div class="col-md-12"><uib-progressbar ng-max="ns.currentBook.pages" value="ns.currentBook.page_at" type="style"><i>{{ns.currentBook.page_at}} / {{ns.currentBook.pages}}</i></uib-progressbar></div>
         </div>
       </div>
     </div>
