--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body ng-app="myApp">
-    <div ng-include="'/views/templates/header.html'"></div>
+    <div class="header" ng-include="'/views/templates/header.html'"></div>
     <main ng-view>
 
     </main>
