--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -5,7 +5,7 @@
     <div>
 
         <button type="button" class="btn btn-default add-book-button" ng-click="ns.openAddBook('lg')">Add A New Book</button>
-        <p>Need a recommendation? <span ng-click=""Click Here.</p>
+        <p>Need a recommendation? <a href="#recommend">Click here.</a>
 
     </div>
   </div>
