--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -19,8 +19,11 @@
     <script type="text/javascript" src="scripts/controllers/modalInstance.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/progressModal.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/recommendBook.controller.js"></script>
+    <script type="text/javascript" src="scripts/controllers/previewBook.controller.js"></script>
     <script type="text/javascript" src="scripts/services/book.factory.js"></script>
     <script type="text/javascript" src="scripts/services/user.factory.js"></script>
+    <!-- for Google Book Embedded Preview -->
+    <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
