--- a/server/public/views/templates/recommend.html
+++ b/server/public/views/templates/recommend.html
@@ -9,7 +9,7 @@
     </ul>
     <ul class="recommend-book-button-list">
       <li><button ng-click="rb.selectBook($index)">Select This Book</button></li>
-      <li><button ng-click="rb.previewBook($index)">Preview This Book</button></li>
+      <li><button ng-click="rb.previewBook($index, 'lg')">Preview This Book</button></li>
     </ul>
   </div>
 
