--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -23,10 +23,19 @@
 
   <uib-accordion close-others="bs.oneAtATime">
     <div uib-accordion-group class="panel-default" heading="{{collection.title}}" ng-repeat="collection in bs.collection">
-      <img ng-src="{{collection.book_thumbnail}}"/>
-      <br />
-      {{collection.author}}
-      {{collection.pages}}
+      <div class="books-accordion">
+        <div class="book-image">
+          <img ng-src="{{collection.book_thumbnail}}"/>
+        </div>
+        <div class="book-details">
+          <ul>
+            <li>Title: {{collection.title}}</li>
+            <li>Author: {{collection.author}}</li>
+            <li>Pages: {{collection.pages}}</li>
+            <li>Finished On {{collection.book_finished_date | date : format : 'fullDate'}}</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </uib-accordion>
 </div>
