--- a/server/public/views/templates/header.html
+++ b/server/public/views/templates/header.html
@@ -1,3 +1,3 @@
-<div class="header_nav text-center">
+<div class="header_nav">
     <div class="navigation" ng-include="'/views/templates/nav.html'"></div>
 </div>
