--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -1,7 +1,6 @@
 <div class="home_body">
-  <h1>Welcome to A Book A Week</h1>
-  <p>The challenge is to read a book a week for a year. I know that may seem like overboard but if you slot 40-minutes a day to reading this goal can be achieved. A Book A Week strives to help you on you stay on track to meet that goal.</p>
-  <p>The Book Shelf provides you with a visual of the journey you have been on while the Night Stand will allow you to see where you are at on your goal for the week.</p>
+  <h1 class="text-center">The Challenge: 52 Books in 52 Weeks</h1>
+  <p>The purpose of A Book A Week is to help keep you on track to complete the challenge. The Night Stand stores your current book and will show you how many pages you need to read per day to stay on track. Head over to the book shelf to see your progress towards the overall goal.</p>
   <p>Log In to update your progress or to add a new book.</p>
   <div>
     <div uib-alert ng-repeat="alert in hm.alerts track by $index" ng-class="alert">
