--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -22,6 +22,7 @@
     </div>
 
     <div class="book_container" ng-show="ns.showCurrentBookInfo" >
+      <h4>Read {{ns.pagesPerDay}} pages today to stay on track</h4>
       <div class="current_book_info">
         <img ng-src="{{ns.currentBook.book_thumbnail}}" alt="" />
         <ul>
@@ -29,7 +30,6 @@
           <li>Author: {{ns.currentBook.author}}</li>
           <li>Progress: On page {{ns.currentBook.page_at}} of {{ns.currentBook.pages}}</li>
           <li title="Number Includes Today">Days Left To Finish: {{ns.daysToGoal}}</li>
-          <li>Pages to Read Per Day: {{ns.pagesPerDay}}</li>
         </ul>
 
         <div class="night-stand-buttons">
