--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -27,8 +27,16 @@ body {
   padding: 20px;
 }
 
+
+/* applies to current book information and buttons */
 .current_book_info ul {
   list-style: none;
+  font-family: 'Archivo Narrow', sans-serif;
+}
+
+/* Details list on book currently being read */
+.current-book-details {
+  font-size: 20px;
 }
 
 /*vertically aligns site title in header*/
@@ -86,7 +94,8 @@ h2 {
 
 .nav_list li a {
   color: white;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: 'Archivo Narrow', sans-serif;
 }
 
 main {
@@ -133,6 +142,7 @@ main {
 
 .night-stand-header h1 {
   padding-top: 15px;
+  font-family: 'Libre Baskerville', serif;
 }
 
 .books-to-repeat {
@@ -239,6 +249,7 @@ main {
 
 .book-shelf-main h1 {
   margin-top: 5px;
+  font-family: 'Libre Baskerville', serif;
 }
 
 .book-shelf-main {
