--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Libre+Baskerville" rel="stylesheet">
   </head>
   <body ng-app="myApp">
     <div class="header" ng-include="'/views/templates/header.html'"></div>
